agregue un favicon
Agregue el favicon al sitio

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="manifest.webmanifest">
 
     <title>Cantero Rafael - DWN3A PWA</title>
+    <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body>
     <h1 class="alert-success">Animeation</h1>
