--- a/buscador.html
+++ b/buscador.html
@@ -21,8 +21,6 @@
 
 <body>
 
-    <h1 class="alert-success">Estoy Online!</h1>
-
 
 <header>
        <nav class="navbar navbar-expand-md navbar-dark bg-micolor p-4">
@@ -45,6 +43,8 @@
               </div>
       </nav>
 </header>
+
+  <h1 class="h1 text-center my-5">El que busca, encuentra</h1>
     
     <form id="formulario" class="text-center my-5 bg-m">
         <input type="text" id="input" name="input">
