--- a/offline.html
+++ b/offline.html
@@ -53,7 +53,7 @@
 
     <p class="h3 p-5">Mientras nuestro equipo técnico lo soluciona podés entretenerte jugando</p>
 
-    <button id="button" class="my-3">Start/Pause</button>
+    <button id="button" class=" bg-micolor text-white my-3">Start/Pause</button>
 
     <h2> Seconds left: <span id="time-left">20</span></h2>
     <h3 id="result"></h3>
