--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
 <div class="container">
   <div class="row">
-    <div>
+   <div class="offline"><p>Estamos fuera de línea</p></div>
+    <div >
 
   <h1 class="text-center my-5">¿Qué es el anime?</h1>
 
