--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 
 <div class="container">
   <div class="row">
-   <div class="offline"><p>Estamos fuera de línea</p></div>
-    <div >
+    <div class="col-12">
 
   <h1 class="text-center my-5">¿Qué es el anime?</h1>
 
