--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="buscador.html">Buscador</a>
+                    <a class="nav-link" href="buscador.html"><span class="amarillo">Buscador</span></a>
                   </li> 
                 </ul>
               </div>
